# retrieval-pareto

./: .gitignore  LICENSE  MANIFEST.txt  METHODOLOGY.md  Makefile  README.md  RESULTS.md  pyproject.toml
plots/output/: quality_latency.html  quality_storage.html
results/beir/arguana/dense-binary-rerank/: Alibaba-NLP__gte-large-en-v1.5.seq512.binary-rerank.candidates1000.json  BAAI__bge-large-en-v1.5.seq512.binary-rerank.candidates1000.json  BAAI__bge-small-en-v1.5.seq512.binary-rerank.candidates1000.json  Qwen__Qwen3-Embedding-8B.seq512.binary-rerank.candidates1000.json  intfloat__e5-large-v2.seq512.binary-rerank.candidates1000.json  nvidia__NV-Embed-v2.seq512.binary-rerank.candidates1000.json
results/beir/arguana/dense-flat/: Alibaba-NLP__gte-large-en-v1.5.seq512.flat.json  BAAI__bge-large-en-v1.5.seq512.flat.json  BAAI__bge-small-en-v1.5.seq512.flat.json  Qwen__Qwen3-Embedding-8B.seq512.flat.json  intfloat__e5-large-v2.seq512.flat.json  (+1 more)
scripts/: export_site_data.py  latency_fill.py  run_eval.py  run_hybrid_supplement.py  serve_site.py  validate_v1_coverage.py
site/: app.js  index.html  methodology.html  styles.css
site/data/: results.json
src/retrieval_pareto/: __init__.py  cache.py  eval.py  model_registry.py  types.py
src/retrieval_pareto/adapters/: __init__.py  dense_adapter.py  late_interaction_adapter.py
src/retrieval_pareto/benchmarks/: __init__.py  beir_loader.py
src/retrieval_pareto/metrics/: __init__.py  cost.py  latency.py  quality.py  storage.py
src/retrieval_pareto/plots/: __init__.py  generate_plots.py
(+692 files in other folders)
