[project]
name = "retrieval-pareto"
version = "0.1.0"
description = "Cost-quality benchmark for dense and late-interaction retrievers."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "datasets>=3.0.0",
  "faiss-cpu>=1.8.0",
  "fastembed>=0.4.0",
  "hnswlib>=0.8.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "plotly>=5.24.0",
  "psutil>=6.0.0",
  "pylate>=1.2.0",
  "sentence-transformers>=3.0.0",
  "torch>=2.2.0",
]

[project.optional-dependencies]
scann = ["scann>=1.3.0; platform_system == 'Linux' and python_version < '3.13'"]

[project.scripts]
retrieval-pareto-eval = "retrieval_pareto.eval:main"
retrieval-pareto-plots = "retrieval_pareto.plots.generate_plots:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrieval_pareto"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
